--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ dependencies = [
     "psycopg2-binary>=2.9.0",
     "websockets>=10.0",
     "requests>=2.0.0",
+    "ruff>=0.1.0",
+    "black>=23.0.0",
+    "isort>=5.12.0",
 ]
 requires-python = ">=3.9"
 
@@ -35,3 +38,13 @@ packages = ["app"]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
 addopts = "-ra -q"
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+line_length = 88
+
+[project.scripts]
+reset-db = "scripts.reset_db:main"
+lint = "scripts.lint:main"
+lint-fix = "scripts.lint:fix"
