--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "ruff>=0.1.0",
     "black>=23.0.0",
     "isort>=5.12.0",
+    "pyright>=1.1.0",
 ]
 requires-python = ">=3.9"
 
@@ -48,3 +49,6 @@ line_length = 88
 reset-db = "scripts.reset_db:main"
 lint = "scripts.lint:main"
 lint-fix = "scripts.lint:fix"
+
+[tool.pyright] 
+typecheckingMode  = "strict"
